<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nomad_mystic_passwordmanager.passwordmanager.LoginFragment">


    <TextView
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addAccount" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_account_name"
        android:hint="@string/account"
        android:ems="10"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_account_password"
        android:hint="@string/password"
        android:ems="10"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:onClick="addAccountCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            android:onClick="addAccountSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"/>
    </LinearLayout>
</LinearLayout>
